--- a/alarm/app/src/main/res/drawable/background_ring.xml
+++ b/alarm/app/src/main/res/drawable/background_ring.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <solid android:color="@color/background_black" />
+    <solid android:color="@color/background_purple" />
 
     <stroke
         android:width="1dp"
